--- a/src/RestaurantsTable/RestaurantsTable.css
+++ b/src/RestaurantsTable/RestaurantsTable.css
@@ -1,5 +1,5 @@
-.table-container {
-  margin: 20px;
+.table {
+  margin-left: 50px;
 }
 
 .restaurants-header-container {
@@ -8,6 +8,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   margin: auto;
+  margin-top: 20px;
   width: 1000px;
 }
 
